--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -27,7 +27,7 @@ layout : default
       <div id="introduction">
         <h1 class="Main-color font-Raleway" style="font-weight: bold">{{ site.introduction.greeting }}</h1>
         <h2 class="SubText-color font-Raleway" style="font-weight: bold;">
-          Lorem Ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+          Game lover, Game Design/Developer and Stargazer</h2>
         <h4 class="Bright-color font-Dosis" style="font-size: 1.5rem;">
           {{ site.introduction.introductionAboutMe }}
         </h4>
@@ -63,9 +63,9 @@ layout : default
             {{ item.skillName }}
           </div>
           <div class="horizontal-flex">
-            <div class="description skill-detail Bright-color beforeLeftLine font-Dosis">
+            <!--<div class="description skill-detail Bright-color beforeLeftLine font-Dosis">
               {{ item.skillDetail }}
-            </div>
+            </div>-->
             <div class="description beforeLeftLine font-Dosis">
               <p>PreviousWork</p>
               <ul>
@@ -106,7 +106,7 @@ layout : default
             Main content
           </div>
           <div id="main-content-description-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent a commodo nibh. Quisque non ligula ante. Praesent sed nunc eget arcu iaculis sagittis. Donec et convallis leo. Nulla sodales nibh nisi, vehicula condimentum erat rhoncus ut.
+            WIP
           </div>
         </div>
         <button id="main-content-description-button" class="show-detail-button font-Dosis Bright-color" >Learn more</button>
