--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!--need to change exact value to relative value-->
 <div id="footer">
     <ul id="footerlist">
-        <li><a onclick="copy()"><img src="/assets/img/envelope-fill.svg" alt="email"></a></li>
+        <li><button class="none" onclick="copy()"><img src="/assets/img/envelope-fill.svg" alt="email"></button></li>
         <script>
             function copyToClipboard(val) {
               const t = document.createElement("textarea");
