--- a/_sass/layout/footer.scss
+++ b/_sass/layout/footer.scss
@@ -1,3 +1,10 @@
+.none{
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+}
+
 //need to change exact value to relative value
 @media screen and (min-width: 825px){
     #footer{
@@ -28,6 +35,11 @@
         background-color: black;
     }
     #footerlist li a img{
+        height: 1.5em;
+        margin: 10px;
+        max-height: 40px;
+    }
+    #footerlist li button img{
         height: 1.5em;
         margin: 10px;
         max-height: 40px;
