Undetected Lorem ipsum page added

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -109,7 +109,7 @@ layout : default
             WIP
           </div>
         </div>
-        <button id="main-content-description-button" class="show-detail-button font-Dosis Bright-color" >Learn more</button>
+        <button id="main-content-description-button" class="show-detail-button font-Dosis Bright-color" onclick="window.location.href='{% post_url 2023-12-10-Undetected %}'">Learn more</button>
       </div>
     </div>
     <div id="about-my-Work-another">
